@@ -8,6 +8,7 @@
 * Fix - Fix ECE modal not loading on pay for order page when coupon is applied.
 * Fix - Do not load express payment buttons on switch subscription page.
 * Fix - Return 'is_live' as true in account summary response when test mode is disabled in gateway settings and charge is enabled in Stripe account.
+* Fix - Prevents notices being displayed on WordPress 6.7 due to loading translations too early (only shown on stores with WP_DEBUG enabled).
 
 = 8.9.0 - 2024-11-14 =
 * Update - Enhance webhook processing to enable retrieving orders using payment_intent metadata.
